<resources>
    <string name="app_name">Leave Management</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_google">Login with your Infrrd account</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login_details_error">Cannot fetch user data at the moment</string>
    <string name="username">username</string>
    <string name="remaining">Remaining</string>
    <string name="leave_balance">Leave balance</string>
    <string name="spent">Spent</string>
    <string name="applied_leaves">Applied leaves</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="apply_leave">Apply leave/Comp off</string>
    <string name="apply_wfh">Apply WFH</string>
    <string name="leave_history">Leave history</string>
    <string name="leave_report">Leave report</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="about">About</string>
    <string name="skillsViewHolder">Skills</string>
    <string name="experience">Experience</string>
    <string name="education">Education</string>
    <string name="leave_type">Leave type</string>
    <string name="sick_leave">Sick</string>
    <string name="casual_leave">Casual</string>
    <string name="comp_off">Comp off</string>
    <string name="advanced_leave">Advanced</string>
    <string name="work_from_home">WFH</string>
    <string name="date_range">Date range</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="no_of_working_days">Number of working dates</string>
    <string name="leave_comments">Leave comments</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="sick_leave_warning">Sick leave can only be applied for today</string>
    <string name="select_start_date_first">Select start date first</string>
    <string name="wfh_warning">Work from home can only be applied for today</string>
    <string name="comp_off_warning">Comp off can only be applied for today</string>
    <string name="label_birthday">Birthday:</string>
    <string name="label_email">Email:</string>
    <string name="label_city">City:</string>
    <string name="label_interests">Interests:</string>
    <string name="label_website">Website:</string>
    <string name="label_phone">Phone:</string>
    <string name="half_day">Half day</string>
    <string name="full_day">Full day</string>
    <string name="today">Today</string>
    <string name="retrofit_error_message">No connection to the API could be established</string>
    <string name="edit_experience">Edit experience</string>
    <string name="edit_education">Edit education</string>
    <string name="edit_skills">Edit skills</string>
    <string name="employer_name">Employer name</string>
    <string name="designation">Designation</string>
    <string name="duration">Duration</string>
    <string name="date">date</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="enter">Enter</string>
</resources>
