<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ai.infrrd.leavemanagement.ProfileActivity"
    tools:showIn="@layout/activity_profile"
    android:padding="@dimen/dimen_16_dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dimen_16_dp"
                android:paddingTop="@dimen/dimen_16_dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/dimen_16_dp"
                    android:paddingLeft="@dimen/dimen_16_dp"
                    android:paddingRight="@dimen/dimen_16_dp"
                    android:paddingTop="@dimen/dimen_16_dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">\

                        <TextView
                            style="@style/ProfileHeaders"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/about" />

                        <ImageView
                            android:layout_width="@dimen/dimen_24_dp"
                            android:layout_height="@dimen/dimen_24_dp"
                            android:src="@drawable/ic_edit_icon" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="@dimen/dimen_16_dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingTop="@dimen/dimen_8_dp"
                            android:paddingBottom="@dimen/dimen_8_dp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/label_email"
                                style="@style/LabelHeaders"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/profile_email"/>

                        </LinearLayout>
                        <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                            android:paddingTop="@dimen/dimen_8_dp"
                            android:paddingBottom="@dimen/dimen_8_dp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/label_birthday"
                                style="@style/LabelHeaders"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/profile_birthday"/>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingTop="@dimen/dimen_8_dp"
                            android:paddingBottom="@dimen/dimen_8_dp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/label_city"
                                style="@style/LabelHeaders"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/profile_city"/>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingTop="@dimen/dimen_8_dp"
                            android:paddingBottom="@dimen/dimen_8_dp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/label_interests"
                                style="@style/LabelHeaders"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/profile_interests"/>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingTop="@dimen/dimen_8_dp"
                            android:paddingBottom="@dimen/dimen_8_dp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/label_phone"
                                style="@style/LabelHeaders"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/profile_phone"/>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingTop="@dimen/dimen_8_dp"
                            android:paddingBottom="@dimen/dimen_8_dp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/label_website"
                                style="@style/LabelHeaders"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/profile_website"/>

                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dimen_16_dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dimen_16_dp"
                android:paddingTop="@dimen/dimen_16_dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/dimen_16_dp"
                    android:paddingLeft="@dimen/dimen_16_dp"
                    android:paddingRight="@dimen/dimen_16_dp"
                    android:paddingTop="@dimen/dimen_16_dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">\

                        <TextView
                            style="@style/ProfileHeaders"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/skillsViewHolder" />

                        <ImageView
                            android:layout_width="@dimen/dimen_24_dp"
                            android:layout_height="@dimen/dimen_24_dp"
                            android:src="@drawable/ic_edit_icon"
                            android:id="@+id/edit_skill"
                            android:onClick="editDetailsListener"/>
                    </LinearLayout>
                    <android.support.v7.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/recycler_view_skills"
                        android:layout_marginTop="@dimen/dimen_16_dp"></android.support.v7.widget.RecyclerView>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dimen_16_dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dimen_16_dp"
                android:paddingTop="@dimen/dimen_16_dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/dimen_16_dp"
                    android:paddingLeft="@dimen/dimen_16_dp"
                    android:paddingRight="@dimen/dimen_16_dp"
                    android:paddingTop="@dimen/dimen_16_dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">\

                        <TextView
                            style="@style/ProfileHeaders"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/experience" />

                        <ImageView
                            android:layout_width="@dimen/dimen_24_dp"
                            android:layout_height="@dimen/dimen_24_dp"
                            android:src="@drawable/ic_edit_icon"
                            android:id="@+id/edit_experience"
                            android:onClick="editDetailsListener"/>
                    </LinearLayout>


                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_view_experience"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/dimen_16_dp"></android.support.v7.widget.RecyclerView>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dimen_16_dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dimen_16_dp"
                android:paddingTop="@dimen/dimen_16_dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/dimen_16_dp"
                    android:paddingLeft="@dimen/dimen_16_dp"
                    android:paddingRight="@dimen/dimen_16_dp"
                    android:paddingTop="@dimen/dimen_16_dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">\

                        <TextView
                            style="@style/ProfileHeaders"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/education" />

                        <ImageView
                            android:layout_width="@dimen/dimen_24_dp"
                            android:layout_height="@dimen/dimen_24_dp"
                            android:src="@drawable/ic_edit_icon"
                            android:id="@+id/edit_education"
                            android:onClick="editDetailsListener"/>
                    </LinearLayout>
                    <android.support.v7.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/recycler_view_education"
                        android:layout_marginTop="@dimen/dimen_16_dp"></android.support.v7.widget.RecyclerView>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
