<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ai.infrrd.leavemanagement.AddActivity"
    android:paddingTop="@dimen/dimen_16_dp"
    android:paddingBottom="@dimen/dimen_16_dp"
    android:paddingLeft="@dimen/dimen_16_dp"
    android:paddingRight="@dimen/dimen_16_dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen_16_dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/employer_display_picture"
                    android:layout_width="@dimen/dimen_80_dp"
                    android:layout_height="@dimen/dimen_80_dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/profile_default" />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_16_dp"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorAccent">

                        <components.DelayAutoCompleteTextView
                            android:id="@+id/et_book_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/employer_name"
                            android:imeOptions="flagNoExtractUi|actionSearch"
                            android:inputType="textCapSentences"
                            android:paddingRight="@dimen/dimen_16_dp" />

                    </android.support.design.widget.TextInputLayout>

                    <ProgressBar
                        android:id="@+id/pb_loading_indicator"
                        style="?android:attr/progressBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|right"
                        android:layout_marginRight="@dimen/dimen_16_dp"
                        android:visibility="gone" />
                </FrameLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="@dimen/dimen_16_dp"
                android:textColorHint="@color/colorAccent">

                <EditText
                    android:id="@+id/input_employer_role"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/designation"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">

                <LinearLayout
                    android:layout_width="@dimen/dimen_0_dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:background="@drawable/border_single_side">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/start"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-condensed"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="January 17, 2017"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/colorAccent"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/dimen_0_dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/dimen_8_dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/end"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-condensed"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="January 17, 2017"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/colorAccent"/>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>



    </android.support.v7.widget.CardView>



</LinearLayout>


