<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dimen_0_dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_card_height_dashboard"
            android:layout_marginTop="@dimen/dimen_16_dp"
            android:layout_marginLeft="@dimen/dimen_16_dp"
            android:layout_marginRight="@dimen/dimen_16_dp"
            card_view:cardBackgroundColor="@color/colorRemainingLeaves">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/count_leave_balance"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/leave_balance"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_card_height_dashboard"
            android:layout_marginTop="@dimen/dimen_16_dp"
            android:layout_marginLeft="@dimen/dimen_16_dp"
            android:layout_marginRight="@dimen/dimen_16_dp"
            card_view:cardBackgroundColor="@color/colorAppliedLeaves">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/count_applied_leaves"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/applied_leaves"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_card_height_dashboard"
            android:layout_marginTop="@dimen/dimen_16_dp"
            android:layout_marginLeft="@dimen/dimen_16_dp"
            android:layout_marginRight="@dimen/dimen_16_dp"
            card_view:cardBackgroundColor="@color/colorWorkFromHome">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/count_work_from_home"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/work_from_home"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_200_dp"
            android:layout_marginTop="@dimen/dimen_16_dp"
            android:layout_marginLeft="@dimen/dimen_16_dp"
            android:layout_marginRight="@dimen/dimen_16_dp" />

    </LinearLayout>
</ScrollView>